[workspace]
resolver = "2"
members = [
    "robs",
    "robs-core",
    "robs-video",
    "robs-audio",
    "robs-encoding",
    "robs-outputs",
    "robs-sources",
    "robs-ui",
    "robs-plugins",
    "robs-profiles",
    "robs-chat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
authors = ["ROBS Contributors"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
arc-swap = "1.6"
crossbeam = "0.8"
flume = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
directories = "5.0"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
eframe = { version = "0.29", features = ["default"] }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"

robs-core = { path = "robs-core" }
robs-video = { path = "robs-video" }
robs-audio = { path = "robs-audio" }
robs-encoding = { path = "robs-encoding" }
robs-outputs = { path = "robs-outputs" }
robs-sources = { path = "robs-sources" }
robs-ui = { path = "robs-ui" }
robs-plugins = { path = "robs-plugins" }
robs-profiles = { path = "robs-profiles" }
robs-chat = { path = "robs-chat" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1