[package]
name = "robs-chat"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
flume.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true