[package]
name = "robs-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
crossbeam.workspace = true
flume.workspace = true
uuid.workspace = true
directories.workspace = true
toml.workspace = true
async-trait.workspace = true