[package]
name = "robs-encoding"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
robs-video.workspace = true
robs-audio.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
ffmpeg-sidecar = "2.4"