[package]
name = "robs-profiles"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
directories.workspace = true
toml.workspace = true
uuid.workspace = true