[package]
name = "robs-sources"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
robs-video.workspace = true
robs-audio.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
async-trait.workspace = true
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }