[package]
name = "robs-ui"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
robs-profiles.workspace = true
robs-chat.workspace = true
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
chrono.workspace = true
