[package]
name = "robs-ui"
version.workspace = true
edition.workspace = true

[dependencies]
robs-core.workspace = true
robs-profiles.workspace = true
robs-chat.workspace = true
robs-outputs.workspace = true
robs-encoding.workspace = true
robs-sources.workspace = true
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
chrono.workspace = true
rfd = "0.15"
image = "0.25"
dxgi-capture-rs = "1.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.dependencies]
dxgi-capture-rs = "1.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
